--- a/src/ch.css
+++ b/src/ch.css
@@ -21,3 +21,15 @@
     background: #165973;
     color: white;
 }
+
+.btn_nav{
+    position: relative;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 8px 8px;
+    border: 0;
+    background: green;
+    color: white;
+    border-radius: 5px;
+}
