--- a/src/card.css
+++ b/src/card.css
@@ -21,7 +21,7 @@
   }
   
   .card {
-    background: #191c29;
+    /* background: #191c29; */
     width: var(--card-width);
     height: var(--card-height);
     padding: 3px;
